--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,4 +4,24 @@ body{
 
 h1,h2,h3,h4,h5,h6{
   font-family: 'Fjalla One', sans-serif;
+  font-weight: normal;
 } 
+
+h1{
+  font-size: 40px;
+  line-height: 1.5em;
+  font-weight: normal; /* normal = 400 */
+  letter-spacing: -.2px;
+}
+
+.project-details{
+  width: 500px;
+}
+
+.project-imageContainer{
+  width: 500px;
+}
+
+.hero{
+  height: 300px;
+}
