--- a/css/estilos.css
+++ b/css/estilos.css
@@ -12,6 +12,11 @@ h1{
   line-height: 1.5em;
   font-weight: normal; /* normal = 400 */
   letter-spacing: -.2px;
+  color: white;
+}
+
+h1 strong{
+  color: #026fff;
 }
 
 .project-details{
@@ -24,4 +29,23 @@ h1{
 
 .hero{
   height: 300px;
+  background-image: url(../images/hero.jpg);
+  background-size: 500px 300px;
+  background-repeat: no-repeat;
+  background-position-x: right;
+  background-color: #1b2127;
+}
+
+/* gris oscuro = #1d252c
+   gris claro = #626262
+   background gris = #1b2127
+ */
+.header{
+  background-color: #1b2127;
+  color: white;
+}
+
+.header a{
+  color: white;
+  text-decoration: none;
 }
