--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,11 @@ h1 strong{
   color: #026fff;
 }
 
+.project{
+  border: 1px solid gray;
+  border-radius: 10px; 
+}
+
 .project-details{
   width: 500px;
 }
