--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,6 @@
 body{
   font-family: 'Source Sans Pro', sans-serif;
+  margin: 0;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -19,10 +20,17 @@ h1 strong{
   color: #026fff;
 }
 
+.portfolio{
+  background-color: #fafafa;
+}
+
 .project{
   border: 1px solid gray;
   border-radius: 10px; 
-  margin-bottom: 20px;
+  margin: 10px;
+  margin-bottom: 15px;
+  padding: 20px;
+  background-color: white;
 }
 
 .project-details{
