--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,7 @@ h1{
   font-weight: normal; /* normal = 400 */
   letter-spacing: -.2px;
   color: white;
+  margin: 0;
 }
 
 h1 strong{
@@ -48,6 +49,8 @@ h1 strong{
   background-repeat: no-repeat;
   background-position-x: right;
   background-color: #1b2127;
+  display: flex;
+  align-items: center;
 }
 
 /* gris oscuro = #1d252c
@@ -58,8 +61,8 @@ h1 strong{
   background-color: #1b2127;
   color: white;
   display: flex;
-  height: 90px;
-  /* align-items: center; */
+  height: 70px;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -97,4 +100,21 @@ figure{
   padding: 0 10px;
   display: flex;
   align-items: center;
+}
+
+.footer{
+  background-color: #1d252c;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+}
+
+.footer img{
+  vertical-align: middle;
+}
+
+.footer a{
+  color: white;
 }
