--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,11 +18,11 @@ h1{
 }
 
 h1 strong{
-  color: #026fff;
+  color: #056fff;
 }
 
 h2{
-  color: #026fff;
+  color: #056fff;
   text-transform: uppercase;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: bold;
@@ -62,7 +62,7 @@ h2{
 }
 
 .project strong{
-  font-family: font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .project-details{
@@ -165,18 +165,80 @@ figure{
   text-align: center;
 }
 
+.contact {
+  background-color: #056fff;
+  color: #fff;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .event-description {
   text-align: left;
 }
 
 .event-url{
-  color: #026fff;
+  color: #056fff;
   border: 1px solid;
   padding: 5px 20px;
   text-decoration: none;
   border-radius: 5x; 
 }
 
+.social-link{
+  display: inline-block;
+  width: 50px;
+  height: 50px;  
+  background-size: 50px 50px;
+  margin: 0 10px;
+}
+
+.social-link.twitter {
+  background-image: url(../images/twitter.svg);
+}
+
+.social-link.facebook {
+  background-image: url(../images/facebook.svg);
+}
+
+.social-link.github {
+  background-image: url(../images/github.svg);
+}
+
+.social-link.instagram {
+  background-image: url(../images/instagram.svg);
+}
+
+
+.form-email input {
+  border-color: gray;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px 20px 10px 25px;
+  background-color: white;
+  color: black;
+  background-image: url(../images/envelope.svg);
+  background-size: 15px 15px;
+  background-repeat: no-repeat;
+  background-position-y: center;
+  background-position-x: 5px;
+}
+
+.form-email button {
+  display: block;
+  background: transparent;
+  color: white;
+  padding: 10px 0px;
+  border-radius: 5px;
+  width: 100px;
+  margin-top: 10px;
+  border-color: white;
+}
+
+.form-email h3 {
+  font-family: 'Source Sans Pro', sans-serif;
+}
 .footer{
   background-color: #1d252c;
   color: white;
